--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,13 +1,37 @@
 <ul class="sidebar-nav">
     <li class="sidebar-brand">
-        <form class="form-inline" action="#" method="POST" role="form">
+        <form id="search_form" class="form-inline" action="#" method="POST" role="form">
             <div class="form-group">
                 <label for="search_stock">自选股</label><br>
                 <input type="text" class="form-control input-sm" id="search_stock" placeholder="代码">
             </div>
         </form>
     </li>
-    <li>
+    <li class="item">
+        <div class="media">
+            <div class="pull-left">
+                <a class="name" href="#">中国重工</a>
+                <p class="code">002400.SZ</p>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">36.610</h4>
+                <div>-4.79%</div>
+            </div>
+        </div>
+    </li>
+    <li class="item">
+        <div class="media">
+            <div class="pull-left">
+                <a class="name" href="#">中国重工</a>
+                <p class="code">002400.SZ</p>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">36.610</h4>
+                <div>-4.79%</div>
+            </div>
+        </div>
+    </li>
+    <!-- <li>
         <a href="#">Dashboard</a>
     </li>
     <li>
@@ -27,5 +51,5 @@
     </li>
     <li>
         <a href="#">Contact</a>
-    </li>
+    </li> -->
 </ul>
