Update api stock list/get.

--- a/public/templates/sidebar.html
+++ b/public/templates/sidebar.html
@@ -1,4 +1,4 @@
-<ul class="sidebar-nav">
+<ul class="sidebar-nav" data-type="list">
     <li class="sidebar-brand">
         <form id="search_form" class="form-inline" action="#" method="POST" role="form">
             <div class="form-group">
@@ -7,7 +7,7 @@
             </div>
         </form>
     </li>
-    <li class="item" data-type="item">
+    <!-- <li class="item" data-type="item">
         <div class="media">
             <div class="pull-left">
                 <a class="name" href="#">中国重工</a>
@@ -30,7 +30,7 @@
                 <div>-4.79%</div>
             </div>
         </div>
-    </li>
+    </li> -->
     <!-- <li>
         <a href="#">Dashboard</a>
     </li>
