--- a/public/templates/sidebar/stock.html
+++ b/public/templates/sidebar/stock.html
@@ -1,7 +1,7 @@
 <div class="media">
     <div class="pull-left">
         <a class="name" href="#">{{=it.name}}</a>
-        <p class="code">{{=it.code}}</p>
+        <p class="code">{{=it.symbol}}</p>
     </div>
     <div class="media-body">
         <h4 class="media-heading">{{=it.price}}</h4>
