--- a/public/templates/content.html
+++ b/public/templates/content.html
@@ -1,71 +1,3 @@
-<div class="container-fluid">
-	{{?it.symbol}}
-	    <div class="row">
-	        <div class="col-lg-12">
-	            <h1 class="stock-title" style="">
-	            	{{=it.name}}({{=it.symbol}})
-                    <span class="setting">
-                        <a class="remove_stock" href="javascript:;" title="删除自选股"><i class="fa fa-times"></i></a>
-                        <a href="javascript:;" title="提醒"><i class="fa fa-bell"></i></a>
-                    </span>
-	        	</h1>
-	            <div class="stock-detail clearfix">
-            		<div class="pull-left clearfix price-box">
-	            		<div class="pull-left">
-	            			<div class="price {{?it.change_price > 0}}text-red{{??it.change_price < 0}}text-green{{?}}">
-		            			{{=it.current_price}} <i class="fa {{?it.change_price > 0}}fa-long-arrow-up{{??it.change_price < 0}}fa-long-arrow-down{{??}}fa-minus{{?}}"></i>
-		            		</div>
-		            		<div class="time">
-		            			{{=it.date}} {{=it.time}}
-		            		</div>
-	            		</div>
-	            		<div class="pull-left {{?it.change_price > 0}}text-red{{??it.change_price < 0}}text-green{{?}}">
-	            			<div class="change">
-	            				{{=it.change_price}}
-	            			</div>
-	            			<div class="change">
-	            				{{?it.change_price > 0}}+{{?}}{{=it.change_percent}}%
-	            			</div>
-	            		</div>
-            		</div>
-            		<table class="table table-hover pull-left">
-            			<tbody>
-            				<tr>
-            					<td>
-            						<div>
-            							今开: <span class="{{?it.opening_price < it.current_price}}text-red{{??}}text-green{{?}}">{{=it.opening_price}}</span>
-            						</div>
-            					</td>
-            					<td>
-            						<div>
-            							最高: <span class="{{?it.day_s_high > it.opening_price}}text-red{{??}}text-green{{?}}">{{=it.day_s_high}}</span>
-            						</div>
-            					</td>
-            				</tr>
-            				<tr>
-            					<td>
-            						<div>
-            							昨收: <span>{{=it.last_price}}</span>
-            						</div>
-            					</td>
-            					<td>
-            						<div>
-            							最低: <span class="{{?it.day_s_low < it.opening_price}}text-green{{??}}text-red{{?}}">{{=it.day_s_low}}</span>
-            						</div>
-            					</td>
-            				</tr>
-            			</tbody>
-            		</table>
-	            </div>
-	            <!-- <div class="stock-time-line">
-        			<img class="time_line" src="http://image.sinajs.cn/newchart/min/n/{{=(it.type + it.symbol).toLowerCase()}}.gif" alt="实时分时图">
-        		</div> -->
-        		<div id="chartdiv"></div>
-	        </div>
-	    </div>
-	{{??}}
-		<h1>
-	    	欢迎使用自选股
-		</h1>
-	{{?}}
+<div id="block_content_main" class="container-fluid">
+	欢迎使用自选股
 </div>
