--- a/public/templates/sidebar.html
+++ b/public/templates/sidebar.html
@@ -1,55 +1,13 @@
-<ul class="sidebar-nav" data-type="list">
-    <li class="sidebar-brand">
+<div class="sidebar-nav">
+    <div class="sidebar-brand">
         <form id="search_form" class="form-inline" action="#" method="POST" role="form">
             <div class="form-group">
                 <label for="search_stock">自选股</label><br>
                 <input type="text" class="form-control input-sm" id="search_stock" placeholder="代码">
             </div>
         </form>
-    </li>
-    <!-- <li class="item" data-type="item">
-        <div class="media">
-            <div class="pull-left">
-                <a class="name" href="#">中国重工</a>
-                <p class="code">002400.SZ</p>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading">36.610</h4>
-                <div>-4.79%</div>
-            </div>
-        </div>
-    </li>
-    <li class="item" data-type="item">
-        <div class="media">
-            <div class="pull-left">
-                <a class="name" href="#">中国重工</a>
-                <p class="code">002400.SZ</p>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading">36.610</h4>
-                <div>-4.79%</div>
-            </div>
-        </div>
-    </li> -->
-    <!-- <li>
-        <a href="#">Dashboard</a>
-    </li>
-    <li>
-        <a href="#">Shortcuts</a>
-    </li>
-    <li>
-        <a href="#">Overview</a>
-    </li>
-    <li>
-        <a href="#">Events</a>
-    </li>
-    <li>
-        <a href="#">About</a>
-    </li>
-    <li>
-        <a href="#">Services</a>
-    </li>
-    <li>
-        <a href="#">Contact</a>
-    </li> -->
+    </div>
+</div>
+<ul class="sidebar-nav" data-type="list">
+
 </ul>
