Add a new algorithm.

--- a/public/templates/content/header.html
+++ b/public/templates/content/header.html
@@ -33,6 +33,12 @@
                     </div>
                 </div>
 
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="enable_limitup" {{?it.setting.enable_limitup}}checked{{?}}>打开涨停提醒设置
+                    </label>
+                </div>
+
                 <div class="form-group">
                     <div class="col-lg-offset-6 col-lg-2">
                         <button type="submit" class="btn btn-primary">保存</button>
